# channel-analytics

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  alembic.ini  demo.py  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 0001_initial.py
channel_analytics/: __init__.py  cli.py
channel_analytics/api/: __init__.py  app.py  deps.py
channel_analytics/app/: config.py  database.py  dependencies.py  main.py
channel_analytics/auth/: __init__.py  permissions.py
channel_analytics/config/: __init__.py  secrets.py  settings.py
channel_analytics/data/: README.md  fixtures.py  seed.py
channel_analytics/db/: __init__.py  dim_sync.py  engine.py
channel_analytics/etl/: __init__.py  brand.py  cleaning.py  expiry.py  field_mapping.py  pipeline.py  provider_loader.py  rules.py  trend.py  turnover.py  types.py  utils.py
channel_analytics/rpa/: __init__.py  base.py  excel_compat.py  exceptions.py  runner.py  scheduler.py  worker.py
channel_analytics/scheduler/: __init__.py
data/fixtures/: README.md  purchase_order.csv  purchase_req.csv  sales_out.csv  stock_current.csv  stock_in.csv
deploy/: README.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/scripts/: backup.sh  restore.sh  start.sh
docs/: comparison.md  index.md  mkdocs.yml
docs/architecture/: etl-pipeline.md  overview.md  permissions.md  plugin-system.md
docs/decisions/: README.md
docs/getting-started/: docker.md  first-run.md  install.md
docs/how-to/: add-brand-whitelist.md  add-custom-report.md  customize-thresholds.md  write-erp-adapter.md
docs/reference/: api.md  cli.md  config.md
docs/security/: data-handling.md
examples/: README.md  business_rules.example.yaml
examples/cosmetics_demo/: brands.yaml
examples/minimal_plugin/: README.md  adapter.py  pyproject.json
examples/notebooks/: 01_quickstart.ipynb
scripts/: README.md  branding_keywords.example.yaml  check_branding.py  detect_pii.py
tests/: __init__.py  conftest.py
tests/original/: conftest.py  test_auth_api.py  test_core.py  test_custom_report_service.py  test_customer_lifecycle.py  test_etl_api.py  test_etl_schedule.py  test_permissions_api.py  test_sales_api.py  test_stock_api.py
tests/unit/: __init__.py  test_api_routers.py  test_auth_permissions.py  test_config_smoke.py  test_db_dim_sync.py  test_db_schema.py  test_etl_cleaning.py  (+18 more)
web/: README.md  index.html  package.json  tsconfig.json  vite.config.js
(+164 files in other folders)
